home画面リファクタリング

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --color-text-secondary:  #C4C4C4;
 
   --color-background-primary: #F3F3F3;
+  --color-component-accent: #FA9289;
 }
 
 /* iOSオートフィル対策（必要な場合のみ） */
